Start work on docker-compose support

--- a/build-helpers/uwsgi.ini
+++ b/build-helpers/uwsgi.ini
@@ -2,7 +2,8 @@
 module = wsgi
 master = true
 processes = 4
+plugin = python3,http
 
 http = 0.0.0.0:3031
 wsgi-file = app.py
-wsgi-callable = app
+callable = app
