--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,32 @@ services:
     maniwani:
         build: .
         ports:
-            - "3031:5000"
+            - "5000:3031"
     minio:
         image: "minio/minio"
+        hostname: minio
         restart: always
+        depends_on:
+            - dnsproxy
         environment:
             - MINIO_ACCESS_KEY=minio
             - MINIO_SECRET_KEY=miniostorage
         volumes:
             - ./compose-data/minio:/data
+        command: server /data
     postgres:
         image: postgres
         restart: always
         environment:
             - POSTGRES_USER=dev
             - POSTGRES_PASSWORD=dev
+            - POSTGRES_DB=dev
         volumes:
             - ./compose-data/postgres:/var/lib/postgresql/data
+    dnsproxy:
+        image: "defreitas/dns-proxy-server"
+        hostname: "dns.mageddo"
+        network_mode: host
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            - /etc/resolv.conf:/etc/resolv.conf
