--- a/build-helpers/config-template.cfg
+++ b/build-helpers/config-template.cfg
@@ -1,6 +1,6 @@
 # Configuration template for the production Docker target
 # Make sure to change these settings before triggering a build intended to be public-facing!
-SQLALCHEMY_DATABASE_URI = "postgresql://dev:dev@database/dev"
+SQLALCHEMY_DATABASE_URI = "postgresql://dev:dev@postgres/dev"
 STORAGE_PROVIDER = "S3"
 S3_ENDPOINT = "http://minio:9000"
 S3_ACCESS_KEY = "minio"
