--- a/build-helpers/config-template.cfg
+++ b/build-helpers/config-template.cfg
@@ -5,3 +5,4 @@ STORAGE_PROVIDER = "S3"
 S3_ENDPOINT = "http://minio:9000"
 S3_ACCESS_KEY = "minio"
 S3_SECRET_KEY = "miniostorage"
+SERVE_STATIC = False
