--- a/build-helpers/uwsgi.ini
+++ b/build-helpers/uwsgi.ini
@@ -3,8 +3,8 @@ module = wsgi
 master = true
 processes = 4
 die-on-term = true
-plugin = python3,http
+plugin = python3
 
-http = 0.0.0.0:3031
+socket = 0.0.0.0:3031
 wsgi-file = app.py
 callable = app
