--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.0",
     "bootstrap": "^4.1.3",
+    "imagesloaded": "^4.1.4",
     "jquery": "^3.3.1",
     "masonry-layout": "^4.2.2",
     "popper.js": "^1.14.6"
