--- a/deploy-configs/config-template.cfg
+++ b/deploy-configs/config-template.cfg
@@ -6,3 +6,4 @@ S3_ENDPOINT = "http://minio:9000"
 S3_ACCESS_KEY = "minio"
 S3_SECRET_KEY = "miniostorage"
 SERVE_STATIC = False
+MAX_CONTENT_LENGTH = 5 * (1024 ** 2)
