Pull imageboard name from config file instead of hardcoding it

--- a/deploy-configs/config-template.cfg
+++ b/deploy-configs/config-template.cfg
@@ -1,5 +1,6 @@
 # Configuration template for the production Docker target
 # Make sure to change these settings before triggering a build intended to be public-facing!
+INSTANCE_NAME = "Maniwani"
 SQLALCHEMY_DATABASE_URI = "postgresql://dev:dev@postgres/dev"
 STORAGE_PROVIDER = "S3"
 S3_ENDPOINT = "http://minio:9000"
