--- a/deploy-configs/maniwani.cfg
+++ b/deploy-configs/maniwani.cfg
@@ -7,4 +7,5 @@ S3_ENDPOINT = "http://minio:9000"
 S3_ACCESS_KEY = "minio"
 S3_SECRET_KEY = "miniostorage"
 SERVE_STATIC = False
+SERVE_REST = True
 MAX_CONTENT_LENGTH = 5 * (1024 ** 2)
