--- a/deploy-configs/uwsgi.ini
+++ b/deploy-configs/uwsgi.ini
@@ -2,8 +2,9 @@
 module = wsgi
 master = true
 processes = 4
+gevent = 10
 die-on-term = true
-plugin = python3
+plugin = python3,gevent
 
 socket = 0.0.0.0:3031
 wsgi-file = app.py
