--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,10 @@ services:
             - POSTGRES_DB=dev
         volumes:
             - ./compose-data/postgres:/var/lib/postgresql/data
+    redis:
+        image: redis
+        hostname: redis
+        restart: always
     dnsproxy:
         image: "defreitas/dns-proxy-server"
         hostname: "dns.mageddo"
