Add intial captchouli support

--- a/deploy-configs/maniwani.cfg
+++ b/deploy-configs/maniwani.cfg
@@ -11,4 +11,5 @@ REDIS_HOST = "redis"
 SERVE_STATIC = False
 SERVE_REST = True
 MAX_CONTENT_LENGTH = 5 * (1024 ** 2)
-USE_RECAPTCHA = False
+CAPTCHA_METHOD = "CAPTCHOULI"
+CAPTCHOULI_URL = "http://captchouli:8512"
