--- a/deploy-configs/maniwani.cfg
+++ b/deploy-configs/maniwani.cfg
@@ -13,3 +13,4 @@ SERVE_REST = True
 MAX_CONTENT_LENGTH = 5 * (1024 ** 2)
 CAPTCHA_METHOD = "CAPTCHOULI"
 CAPTCHOULI_URL = "http://captchouli:8512"
+CAPTCHA_COOLDOWN = 10 * 60
