Automatically refresh browser on template or scss change

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "homepage": "https://github.com/DangerOnTheRanger/maniwani#readme",
   "devDependencies": {
+    "browser-sync": "^2.26.3",
     "del": "^3.0.0",
-    "gulp": "^4.0.0",
+    "gulp": "github:gulpjs/gulp",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.11.0"
   },
