Fix broken gevent support in uwsgi.ini and uwsig-devmode.ini

--- a/deploy-configs/uwsgi-devmode.ini
+++ b/deploy-configs/uwsgi-devmode.ini
@@ -1,10 +1,11 @@
 [uwsgi]
 module = wsgi
 master = true
+enable-threads = true
 processes = 4
 gevent = 10
 die-on-term = true
-plugin = python3,gevent,http
+plugin = python3,gevent3,http
 
 http = 0.0.0.0:5000
 wsgi-file = app.py
