--- a/deploy-configs/uwsgi.ini
+++ b/deploy-configs/uwsgi.ini
@@ -1,10 +1,11 @@
 [uwsgi]
 module = wsgi
 master = true
+enable-threads = true
 processes = 4
 gevent = 10
 die-on-term = true
-plugin = python3,gevent
+plugin = python3,gevent3
 
 socket = 0.0.0.0:3031
 wsgi-file = app.py
