--- a/deploy-configs/maniwani.cfg
+++ b/deploy-configs/maniwani.cfg
@@ -2,6 +2,7 @@
 # Make sure to change these settings before triggering a build intended to be public-facing!
 INSTANCE_NAME = "Maniwani"
 SQLALCHEMY_DATABASE_URI = "postgresql://dev:dev@postgres/dev"
+RENDERER_HOST = "http://maniwani-frontend:3000"
 STORAGE_PROVIDER = "S3"
 S3_ENDPOINT = "http://minio:9000"
 S3_ACCESS_KEY = "minio"
@@ -11,6 +12,6 @@ REDIS_HOST = "redis"
 SERVE_STATIC = False
 SERVE_REST = True
 MAX_CONTENT_LENGTH = 5 * (1024 ** 2)
-CAPTCHA_METHOD = "CAPTCHOULI"
+# CAPTCHA_METHOD = "CAPTCHOULI"
 CAPTCHOULI_URL = "http://captchouli:8512"
 CAPTCHA_COOLDOWN = 10 * 60
