--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ Pillow = "*"
 SQLAlchemy = "*"
 Flask-RESTful = "*"
 boto3 = "*"
-"psycopg2-binary" = "*"
+psycopg2-binary = "*"
 flask-migrate = "*"
 requests = "*"
 bleach = "*"
