chore(Python/NodeJS deps): Fixed the error that I managed to do.

--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ psycopg2-binary = "*"
 flask-migrate = "*"
 requests = "*"
 bleach = "*"
-gevent = "*"
+gevent = "==1.5.0"
 redis = "*"
 
 [dev-packages]
