--- a/deploy-configs/maniwani.cfg
+++ b/deploy-configs/maniwani.cfg
@@ -12,6 +12,6 @@ REDIS_HOST = "redis"
 SERVE_STATIC = False
 SERVE_REST = True
 MAX_CONTENT_LENGTH = 5 * (1024 ** 2)
-# CAPTCHA_METHOD = "CAPTCHOULI"
+CAPTCHA_METHOD = "CAPTCHOULI"
 CAPTCHOULI_URL = "http://captchouli:8512"
 CAPTCHA_COOLDOWN = 10 * 60
