Add devmode support to React renderer

--- a/deploy-configs/devmode.cfg
+++ b/deploy-configs/devmode.cfg
@@ -1,6 +1,7 @@
 # Configuration file for devmode
 INSTANCE_NAME = "Maniwani"
 SQLALCHEMY_DATABASE_URI = "sqlite:///./deploy-configs/test.db"
+RENDERER_HOST = "http://127.0.0.1:3000"
 STORAGE_PROVIDER = "FOLDER"
 STORE_PROVIDER = "INTERNAL"
 SERVE_STATIC = True
