Use Redux/React-Redux for state management

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-timeago": "^4.4.0"
+    "react-redux": "^7.2.0",
+    "react-timeago": "^4.4.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
