--- a/deploy-configs/maniwani.cfg
+++ b/deploy-configs/maniwani.cfg
@@ -14,3 +14,4 @@ MAX_CONTENT_LENGTH = 5 * (1024 ** 2)
 CAPTCHA_METHOD = "CAPTCHOULI"
 CAPTCHOULI_URL = "http://captchouli:8512"
 CAPTCHA_COOLDOWN = 10 * 60
+FFMPEG_PATH = "./ffmpeg/ffmpeg"
