Fix uWSGI gevent plugin not getting loaded

--- a/deploy-configs/uwsgi-devmode.ini
+++ b/deploy-configs/uwsgi-devmode.ini
@@ -5,7 +5,7 @@ enable-threads = true
 processes = 4
 gevent = 10
 die-on-term = true
-plugin = python3,gevent3,http
+plugin = python3,gevent_python3,http
 
 http = 0.0.0.0:5000
 wsgi-file = app.py
