--- a/deploy-configs/uwsgi.ini
+++ b/deploy-configs/uwsgi.ini
@@ -5,7 +5,7 @@ enable-threads = true
 processes = 4
 gevent = 10
 die-on-term = true
-plugin = python3,gevent3
+plugin = python3,gevent_python3
 
 socket = 0.0.0.0:3031
 wsgi-file = app.py
