--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.2.0",
     "react-timeago": "^4.4.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
