--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-timeago": "^4.4.0",
     "redux": "^4.0.5",
