--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         environment:
             - CAPTCHOULI_FLAGS=-e -t izayoi_sakuya,yakumo_yukari,hong_meiling
         volumes:
-            - ./compose-captchouli:/home/captchouli/.captchouli
+            - compose-captchouli:/home/captchouli/.captchouli
     minio:
         image: "minio/minio"
         hostname: minio
@@ -23,7 +23,7 @@ services:
             - MINIO_ACCESS_KEY=minio
             - MINIO_SECRET_KEY=miniostorage
         volumes:
-            - ./compose-data/minio:/data
+            - compose-minio:/data
         command: server /data
     nginx:
         image: nginx
@@ -42,11 +42,12 @@ services:
             - POSTGRES_PASSWORD=dev
             - POSTGRES_DB=dev
         volumes:
-            - ./compose-data/postgres:/var/lib/postgresql/data
+            - compose-postgres:/var/lib/postgresql/data
     redis:
         image: redis
         hostname: redis
         restart: always
+        command: [sh, -c, "rm -f /data/dump.rdb && redis-server --save ''"]
     dnsproxy:
         image: "defreitas/dns-proxy-server"
         hostname: "dns.mageddo"
@@ -54,3 +55,7 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
             - /etc/resolv.conf:/etc/resolv.conf
+volumes:
+  compose-captchouli:
+  compose-minio:
+  compose-postgres:
