--- a/package.json
+++ b/package.json
@@ -33,10 +33,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
-    "bootstrap": "^4.4.1",
-    "imagesloaded": "^4.1.4",
-    "jquery": "^3.5.0",
-    "masonry-layout": "^4.2.2",
-    "popper.js": "^1.16.0"
+    "fontsource-fira-sans": "^3.0.5"
   }
 }
